@@ -1,4 +1,14 @@
 %%MatrixMarket matrix coordinate real general
+%
+%  |  1  2  0  0  0 |
+%  |                |
+%  |  0  1  0  0  0 |
+%  |                |
+%  |  0  0  3  0  0 |
+%  |                |
+%  | -1  1  3  2  1 |
+%
+%
 % Test matrix
 4 5 9
 1 2 2.0
